@@ -1,5 +1,10 @@
 2000-07-31  Martin Baulig  <baulig@suse.de>
 
+	* gnome-icon-list.c (gnome_icon_list_unselect_all): Removed the
+	"for internal use only" arguments.
+
+2000-07-31  Martin Baulig  <baulig@suse.de>
+
 	* gnome-canvas-line.c (gnome_canvas_line_destroy): Destroy may run
 	multiple times nowadays.
 	* gnome-canvas-polygon.c (gnome_canvas_polygon_destroy): Likewise.
